Fix issue where questionnaire buttons disappear on narrow screens

--- a/angular/src/app/questionnaire/questionnaire.component.scss
+++ b/angular/src/app/questionnaire/questionnaire.component.scss
@@ -1,7 +1,7 @@
 @import '~styles/mixins/buttons';
 
 .questions-container {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,7 +22,7 @@
     justify-content: space-between;
     margin-bottom: 32px;
 
-    > * {
+    > button {
       flex: 0 0 auto;
     }
 
